@@ -1,3 +1,10 @@
+2005-09-11  Ranjit Mathew  <rmathew@gcc.gnu.org>
+
+	* util.hh (copy_str): New function similar to strdup().
+	* format/format.hh (~format_repr): delete memory pointed to by PLAN.
+	* format/format.cc (format_repr::format_repr): Use a duplicate string
+	for PLAN, not the original string.
+
 2005-07-14  Tom Tromey  <tromey@redhat.com>
 
 	* model/class.cc (apply_type_map): Moved body ...
